--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -10,7 +10,7 @@ extra_configs =
 	targets/diy_2400.ini
 	targets/frsky.ini
 	targets/happymodel_900.ini
-	targets/happymodel_2400.ini
+	targets/tritium_2400.ini
 	targets/imrc.ini
 	targets/namimnorc_900.ini
 	targets/namimnorc_2400.ini
